[package]
name = "kvs"
version = "0.1.0"
authors = ["Kacper Madej <kacperoza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.12"
failure = "0.1.7"
failure_derive = "0.1.7"
serde = { version = "1.0.105", features = ["derive"] }
bincode = "1.2.1"
serde_json = "1.0.48"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
